--- a/projects.json
+++ b/projects.json
@@ -7,6 +7,22 @@
             "languages": ["javascript", "CSS", "HTML"],
             "website":"url",
             "github":"url"
+        },
+        {
+            "name": "Exercise timer",
+            "description": "nuasndansn",
+            "picture": "url",
+            "languages": ["javascript", "CSS", "HTML"],
+            "website":"url",
+            "github":"url"
+        },
+        {
+            "name": "Exercise timer",
+            "description": "nuasndansn",
+            "picture": "url",
+            "languages": ["javascript", "CSS", "HTML"],
+            "website":"url",
+            "github":"url"
         }
     ]
 }
