--- a/projects.json
+++ b/projects.json
@@ -1,9 +1,17 @@
 {
     "projects": [
         {
+            "name": "English dictionary",
+            "description": "nuasndansn",
+            "picture": "./images/DictionaryPic.png",
+            "languages": ["javascript", "SCSS", "HTML"],
+            "website":"url",
+            "github":"url"
+        },
+        {
             "name": "Exercise timer",
             "description": "nuasndansn",
-            "picture": "url",
+            "picture": "./images/DictionaryPic.png",
             "languages": ["javascript", "CSS", "HTML"],
             "website":"url",
             "github":"url"
@@ -11,15 +19,7 @@
         {
             "name": "Exercise timer",
             "description": "nuasndansn",
-            "picture": "url",
-            "languages": ["javascript", "CSS", "HTML"],
-            "website":"url",
-            "github":"url"
-        },
-        {
-            "name": "Exercise timer",
-            "description": "nuasndansn",
-            "picture": "url",
+            "picture": "./images/DictionaryPic.png",
             "languages": ["javascript", "CSS", "HTML"],
             "website":"url",
             "github":"url"
