--- a/projects.json
+++ b/projects.json
@@ -3,7 +3,7 @@
 
         {
             "name": "Password manager",
-            "description": "A full-stack app which allows the user to log in and store passwords from various accounts. The front-end was done with Next.js and the back-end API was done with Express. A MongoDB database is used to store encrypted versions of the user's passwords.",
+            "description": "A full-stack app which allows the user to log in and store passwords from various accounts. The front-end was done with Next.js and the back-end API was done with Express. A MongoDB database is used to store encrypted versions of the user's passwords. Attention: the back-end API is deployed on Render.com and after 15 minutes of inactivity, the server spins down. Therefore the first request can be really slow. Try reloading the page if stuck on your first Register or Login",
             "picture": "./build/images/Password.png",
             "languages": ["javascript", "CSS", "HTML"],
             "website":"https://password-manager-front-end.vercel.app/",
