feat: added image to project

--- a/projects.json
+++ b/projects.json
@@ -3,9 +3,9 @@
 
 
         {
-            "name": "Screenshot",
+            "name": "Screenshot (open-source)",
             "description": "An app which lets the user modify images by rescaling them, adding padding or adding a background. This is an open source project I have been contributing to. I have added several important features such as the scaling and the ability to change the position of the image. I have also helped solve problems with unnecessary re-rendering, something which drastically improved the UX. Another feature I implemented was the “toast-messages” the user gets on copying images to the frame.",
-            "picture": "./build/images/Password.png",
+            "picture": "./build/images/Screenshot.png",
             "languages": ["javascript", "CSS", "HTML"],
             "website":"https://screenshot-ekqt.vercel.app/",
             "github":"https://github.com/ekqt/screenshot"
